--- a/Assets/style.css
+++ b/Assets/style.css
@@ -54,6 +54,13 @@ section {
   padding-bottom: 4rem;
 }
 
+table,
+tr,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
 /* classes */
 .button {
   padding: 1rem;
@@ -67,9 +74,14 @@ section {
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-.d-flex {
+.d-flex-row {
   display: flex;
   flex-direction: row;
+}
+
+.d-flex-col {
+  display: flex;
+  flex-direction: column;
 }
 
 .mypic {
@@ -115,6 +127,10 @@ section {
   width: 100%;
   padding: 20px;
   height: 200px;
+}
+
+.table-headers {
+  font-weight: bold;
 }
 
 .work {
